[tool.poetry]
name = "aiservice"
version = "0.1.0"
description = ""
authors = ["drayee <1473443474@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
sqlmodel = "^0.0.38"
asyncpg = "^0.31.0"
openai = "^2.34.0"
langchain-openai = "^1.2.1"
langgraph = {extras = ["postgres"], version = "^1.1.10"}
langgraph-checkpoint-postgres = "^3.0.5"
langchain-text-splitters = "^1.1.2"
langchain-community = "^0.4.1"
langchain-experimental = "^0.4.1"
python-multipart = "^0.0.27"
dashscope = "^1.25.17"
nacos-sdk-python = "^3.2.0"
a2a-sdk = "<0.3.23"
apscheduler = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
